new route swagger and logging for verification token
